
ChangeLog
 [ + added, - removed, * changed ]
 * 09Nov2015 Fix label for MPI_Ibarrier (shown as MPI_Ibcast)
 * 03Nov2015 Fix state generation for several new MPI calls (backported from 3.2.1)
 * 02Nov2015 Extended Java instrumentation through AspectJ and JVMTI
             Added $EXTRAE_HOME/bin/extreaj launcher for Java apps
             Added new examples in JAVA directory
                manual/  --> instrumentation without AspectJ
                automatic/-> instrumentation with AspectJ
 * 30Oct2015 Extrae 3.2.0 released!
             Fix compilation of extrae-cmd in BG/* if PAPI is not set
             Fix compilation in an other directory rather than $top_src_dir
 * 27Oct2015 Free buffer when pthread routine finishes, not at pthread_join time
             Move MPI_FINALIZE_EV so that it covers instrumentation code
 * 23Oct2015 Waste some CPU time in mpi_ping example for use with extrae_bursts_1ms.xml
             Fix timing Extrae check
 * 22Oct2015 Improved "make check". Added -without-addresses to mpi2prv to ignore addresses
 * 21Oct2015 Fixed visibility of the on-line API routines that are called from the wrappers
             Fix example installation. Use cp instead of ln -s.
             Fix Java compilation in other place rather than extract dir
             Fix configured.sh when building in a directory other than extraction dir
 * 15Oct2015 Code adapted to use Synapse libraries v2.0 instead of the older version libMRNetApp
 * 13Oct2015 Fix parametrization of clCreateKernelsInProgram
 * 05Oct2015 Adding support for MPI3 immediate collectives
             Revamping source code structure, each wrapper generates its
               intermediate lib_wrap_*
             Removed support for TRT, UPC(unfinished), PACX, CELL
 * 16Sep2015 Fixed configure check to look for MPI Fortran libraries named like "libmpifort"
 * 05Aug2015 papi_best_set now checks whether counters and created eventsets
               are 0 or not